--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -31,7 +31,7 @@
        <%= link_to '削除', item_path(@item.id), method: :delete, class:'item-destroy' %>
     <% else %>
         <%# 商品が売れていない場合はこちらを表示しましょう %>
-       <%= link_to '購入画面に進む', "#" ,class:"item-red-btn"%>
+       <%= link_to '購入画面に進む',  item_orders_path(@item.id), class:"item-red-btn"%>
     <% end %>
   <% end %>
     <%# //商品が売れていない場合はこちらを表示しましょう %>
@@ -54,7 +54,7 @@
         </tr>
         <tr>
           <th class="detail-item">商品の状態</th>
-          <td class="detail-value"><%= @item.item_prefecture.name %></td>
+          <td class="detail-value"><%= @item.item_scheduled_delivery.name %></td>
         </tr>
         <tr>
           <th class="detail-item">配送料の負担</th>
@@ -62,7 +62,7 @@
         </tr>
         <tr>
           <th class="detail-item">発送元の地域</th>
-          <td class="detail-value"><%= @item.item_scheduled_delivery.name %></td>
+          <td class="detail-value"><%= @item.item_prefecture.name %></td>
         </tr>
         <tr>
           <th class="detail-item">発送日の目安</th>
