--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -30,7 +30,7 @@
     </div>
     <%# /支払額の表示 %>
 
-    <%= form_with model: @order_shared, url:  item_orders_path, local: true do |f| %>
+    <%= form_with url: item_orders_path, id: 'charge-form', class: 'transaction-form-wrap', local: true do |f| %>
       <%= render 'shared/error_messages', model: @order_shared %>
     <%# カード情報の入力 %>
     <div class='credit-card-form'>
@@ -67,7 +67,7 @@
           <label class="form-text">セキュリティコード</label>
           <span class="indispensable">必須</span>
         </div>
-        <%= f.text_field :card_cvc,class:"input-default", id:"card-cvc", placeholder:"カード背面4桁もしくは3桁の番号", maxlength:"4" %>
+        <%= f.text_field :card_cvc, class:"input-default", id:"card-cvc", placeholder:"カード背面4桁もしくは3桁の番号", maxlength:"4" %>
       </div>
     </div>
     <%# /カード情報の入力 %>
