--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -33,7 +33,7 @@
        <%= link_to '削除', item_path(@item.id), method: :delete, class:'item-destroy' %>
     <% else %>
         <%# 商品が売れていない場合はこちらを表示しましょう %>
-       <% if @item.blank? %>
+       <% if @item.order.blank? %>
           <%= link_to '購入画面に進む',  item_orders_path(@item.id), class:"item-red-btn"%>
        <% end %>
     <% end %>
