--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -130,7 +130,7 @@
         は犯罪であり処罰される可能性があります。
       </p>
       <p class="sentence">
-        また、出品をもちまして
+        また出品をもちまして
         <a href="#">加盟店規約</a>
         に同意したことになります。
       </p>
