--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -89,7 +89,7 @@
     <form>
       <textarea class="comment-text"></textarea>
       <p class="comment-warn">
-        相手のことを考え丁寧なコメントを心がけましょう。
+        相手のことを考え、丁寧なコメントを心がけましょう。
         <br>
         不快な言葉遣いなどは利用制限や退会処分となることがあります。
       </p>
