--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -91,7 +91,7 @@
       <p class="comment-warn">
         相手のことを考え、丁寧なコメントを心がけましょう。
         <br>
-        不快な言葉遣いなどは利用制限や退会処分となることがあります
+        不快な言葉遣いなどは利用制限や退会処分となることがあります。
       </p>
       <button type="submit" class="comment-btn">
         <%= image_tag "comment.png" ,class:"comment-flag-icon" ,width:"20",height:"25"%>
